Added health check settings endpoints; made scheduled process dynamic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=scales
 server.port=8080
+
+config.settings.hc.frequency=20000
+config.settings.hc.timeout=10000
+config.settings.hc.retry=2
