--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=scales
 server.port=8080
 
-config.settings.hc.frequency=20000
-config.settings.hc.timeout=10000
-config.settings.hc.retry=2
+config.scheduler.fixed-rate=30000
+config.scheduler.initial-delay=5000
+
+config.heartbeat-queue.type=sqs
+config.heartbeat-queue.url=placeholder
