--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=scales
 server.port=8080
 
-config.scheduler.fixed-rate=30000
+config.scheduler.fixed-rate=60000
 config.scheduler.initial-delay=5000
 
 config.heartbeat-queue.type=sqs
-config.heartbeat-queue.url=placeholder
+config.heartbeat-queue.url=https://sqs.us-west-1.amazonaws.com/423623844604/HeartbeatQueue
+
+config.max-servers=10
