Removed hardcoded sqs url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ config.scheduler.fixed-rate=60000
 config.scheduler.initial-delay=5000
 
 config.heartbeat-queue.type=sqs
-config.heartbeat-queue.url=https://sqs.us-west-1.amazonaws.com/423623844604/HeartbeatQueue
+config.heartbeat-queue.url=<sqs-url>
 
 config.max-servers=10
