Added random selection algorithm

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ config.scheduler.initial-delay=5000
 config.heartbeat-queue.type=sqs
 config.heartbeat-queue.url=<sqs-url>
 
+config.algorithm=ROUND-ROBIN
+
 config.max-servers=10
