Added algorithm property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 spring.application.name=scales
 server.port=8080
 
+config.algorithm=RANDOM
 config.scheduler.fixed-rate=60000
 config.scheduler.initial-delay=5000
-
 config.heartbeat-queue.type=sqs
 config.heartbeat-queue.url=<sqs-url>
-
-config.algorithm=ROUND-ROBIN
-
 config.max-servers=10
